Added secret env vars to deploy job

--- a/.github/workflows/deploy_ansible.yml
+++ b/.github/workflows/deploy_ansible.yml
@@ -14,3 +14,11 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: ./.github/actions/ansible
+      with: 
+        inventory: hosts_azure_rm.yml
+      env:
+        ANSIBLE_VAULT_PASSWORD: ${{ secrets.ANSIBLE_VAULT_PASSWORD }}
+        AZURE_TENANT: ${{ secrets.AZURE_TENANT }}
+        AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+        AZURE_SECRET: ${{ secrets.AZURE_SECRET }}
